# alzheimerdetection

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  dvc.yaml  main..py  main.py  pyproject.toml
config/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data-preprocessing.ipynb
reports/: numeric_column_names.txt
src/data/: load_data.py
src/features/: preprocess.py
src/models/: evaluate.py  predict.py  train_model.py
src/pipelines/: training_pipeline.py
src/utils/: logger.py
