[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alzheimerdetection"
version = "0.0.1"
description = "Alzehimer detection using ML algorithms."
authors = [
  { name = "pravesh" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["alzheimerdetection"]
include = ["pyproject.toml", "alzheimerdetection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["alzheimerdetection"]
force-sort-within-sections = true

